added win screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 		<div><h2 class="netflix">Player 1: Netflix</h2></div>
 		<div><h2 class="stan">Player 2: Stan</h2></div>
 	</section>
+	
+	<main class="win-screen-netflix hidden">
+		<div>
+			<p>The winner is Netflix!</p>
+			<img src="images/stranger-things.jpeg">
+		</div>
+	</main>
+
+	<main class="win-screen-stan hidden">
+		<div>
+			<p>The winner is Stan!</p>
+			<img src="images/breaking-bad.jpg">
+		</div>
+	</main>
 
 	<main>
 		<div id="p1" class="player"></div>
