--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<section class="player-headings">
 		<div><h2 class="netflix">Player 1: Netflix</h2></div>
+		<div class="restart hidden">Play again</div>
 		<div><h2 class="stan">Player 2: Stan</h2></div>
 	</section>
 	
@@ -52,12 +53,8 @@
 			</div>
 		</div>
 
-		<div id="p2" class="player your-turn"></div>
+		<div id="p2" class="player"></div>
 	</main>
-
-	<section>
-		<div class="restart">Play again</div>
-	</section>
 
 	<footer>
 		<p>&copy; Megan McKeough 2018</p>
