--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
 		<div class="game-board">
 			<div class="row">
-				<div class="square one">square1</div>
-				<div class="square two">square2</div>
-				<div class="square three">square3</div>
+				<div class="square one"><img src="images/twin-peaks.png" class="hidden"><img src="images/jessica-jones.png" class="hidden"></div>
+				<div class="square two"></div>
+				<div class="square three"></div>
 			</div>
 			<div class="row">
-				<div class="square four">square4</div>
-				<div class="square five">square5</div>
-				<div class="square six">square6</div>
+				<div class="square four"></div>
+				<div class="square five"></div>
+				<div class="square six"></div>
 			</div>
 			<div class="row">
-				<div class="square seven">square7</div>
-				<div class="square eight">square8</div>
-				<div class="square nine">square9</div>
+				<div class="square seven"></div>
+				<div class="square eight"></div>
+				<div class="square nine"></div>
 			</div>
 		</div>
 
