working one square img

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<div class="game-board">
 			<div class="row">
-				<div class="square one"><img src="images/twin-peaks.png" class="hidden"><img src="images/jessica-jones.png" class="hidden"></div>
+				<div class="square one"><img src="images/twin-peaks.png" class="hidden stan"><img src="images/jessica-jones.png" class="hidden netflix"></div>
 				<div class="square two"></div>
 				<div class="square three"></div>
 			</div>
