fixed class names

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	</header>
 
 	<section class="player-headings">
-		<div><h2 class="netflix">Player 1: Netflix</h2></div>
+		<div><h2 class="netflix">Player: Netflix</h2></div>
 		<div class="restart hidden">Play again</div>
-		<div><h2 class="stan">Player 2: Stan</h2></div>
+		<div><h2 class="stan">Player: Stan</h2></div>
 	</section>
 	
 	<main class="win-screen-netflix hidden">
