--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<section class="player-headings">
 		<div><h2 class="netflix">Player: Netflix</h2></div>
-		<div class="restart hidden">Play again</div>
+		<div class="restart hidden">>>> Play again <<<</div>
 		<div><h2 class="stan">Player: Stan</h2></div>
 	</section>
 	
