fixed player headings

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 			<div class="row">
 				<div class="square one"><img src="images/murderer.png" class="netflix hidden"><img src="images/better-call-saul.png" class="stan hidden"></div>
 				<div class="square two"><img src="images/OITNB.svg" class="netflix hidden"><img src="images/party-down.png" class="stan hidden"></div>
-				<div class="square three"><img src="images/sense8.png" class="netflix hidden"><img src="images/preacher.png" class="stan hidden"></div>
+				<div class="square three"><img src="images/sense8-2.png" class="netflix hidden"><img src="images/preacher.png" class="stan hidden"></div>
 			</div>
 			<div class="row">
 				<div class="square four"><img src="images/electric-dreams2.png" class="stan hidden"><img src="images/black-mirror.png" class="netflix hidden"></div>
 				<div class="square five"><img src="images/jessica-jones.png" class="hidden netflix"><img src="images/sherlock.jpg" class="stan hidden"></div>
-				<div class="square six"><img src="images/unreal.png" class="stan hidden"><img src="images/terrace-house.gif" class="netflix hidden"></div>
+				<div class="square six"><img src="images/unreal.png" class="stan hidden"><img src="images/terrace-house.png" class="netflix hidden"></div>
 			</div>
 			<div class="row">
-				<div class="square seven"><img src="images/bojack.png" class="netflix hidden"><img src="images/broad-city.jpg" class="stan hidden"></div>
-				<div class="square eight"><img src="images/twin-peaks.png" class="hidden stan"><img src="images/house-of-cards.png" class="netflix hidden"></div>
-				<div class="square nine"><img src="images/glow2.jpg" class="netflix hidden"><img src="images/FNL.png" class="stan hidden"></div>
+				<div class="square seven"><img src="images/bojack.png" class="netflix hidden"><img src="images/broad-city.png" class="stan hidden"></div>
+				<div class="square eight"><img src="images/twin-peaks.jpg" class="hidden stan"><img src="images/house-of-cards.png" class="netflix hidden"></div>
+				<div class="square nine"><img src="images/glow3.png" class="netflix hidden"><img src="images/FNL.png" class="stan hidden"></div>
 			</div>
 		</div>
 
