--- a/index.html
+++ b/index.html
@@ -7,21 +7,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<h1><a href="http://www.netflix.com" target="_blank"><img src="images/netflix.png" alt="Netflix logo"></a> vs <a href="http://www.stan.com.au" target="_blank"><img src="images/stan.png" alt="Stan logo"></a></h1>
-		<h2>A Tic Tac Toe Battle of the Streaming Services</h2>
-	</header>
 
-	<section class="player-headings">
-		<div><h2 class="netflix">Player: Netflix</h2></div>
-		<div class="restart hidden">>>> Play again <<<</div>
-		<div><h2 class="stan">Player: Stan</h2></div>
-	</section>
-	
 	<main class="win-screen-netflix hidden">
 		<div>
 			<p>The winner is Netflix!</p>
 			<img src="images/stranger-things.jpeg">
+			<div class="restart"><p>>>> Play again <<<</p></div>
 		</div>
 	</main>
 
@@ -29,8 +20,19 @@
 		<div>
 			<p>The winner is Stan!</p>
 			<img src="images/breaking-bad.jpg">
+			<div class="restart"><p>>>> Play again <<<</p></div>
 		</div>
 	</main>
+
+	<header>
+		<h1><a href="http://www.netflix.com" target="_blank"><img src="images/netflix.png" alt="Netflix logo"></a> vs <a href="http://www.stan.com.au" target="_blank"><img src="images/stan.png" alt="Stan logo"></a></h1>
+		<h2>A Tic Tac Toe Battle of the Streaming Services</h2>
+	</header>
+
+	<section class="player-headings">
+		<div><h2 class="netflix">Player: Netflix</h2></div>
+		<div><h2 class="stan">Player: Stan</h2></div>
+	</section>
 
 	<main>
 		<div id="p1" class="player"></div>
