added turn marker and transition

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</section>
 
 	<main>
-		<div id="netflix" class="player"></div>
+		<div id="player-netflix" class="player"><p>Your turn! >></p></div>
 
 		<div class="game-board">
 			<div class="row">
@@ -91,7 +91,7 @@
 			</div>
 		</div>
 
-		<div id="stan" class="player"></div>
+		<div id="player-stan" class="player"><p><< Your turn!</p></div>
 	</main>
 
 	<footer>
