--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 	</section>
 
 	<main>
-		<div id="player-netflix" class="player"><p>Your turn! >></p></div>
+		<div id="player-netflix" class="player">
+			<div class="wins-netflix">Won: <span></span></div>
+			<p>Your turn! >></p>
+		</div>
 
 		<div class="game-board">
 			<div class="row">
@@ -91,7 +94,10 @@
 			</div>
 		</div>
 
-		<div id="player-stan" class="player"><p><< Your turn!</p></div>
+		<div id="player-stan" class="player">
+			<div class="wins-stan">Won: <span></span></div>
+			<p><< Your turn!</p>
+		</div>
 	</main>
 
 	<footer>
