--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	</main>
 
 	<footer>
-		<p>&copy; Megan McKeough 2018</p>
+		<p><a href="https://www.linkedin.com/in/megan-mckeough-0bbbb392/">&copy; Megan McKeough 2018</a></p>
 	</footer>
 
 	<script src="app.js"></script>
