added choose service screen on start

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+	<main class="choose-service">
+		<div>
+			>>> <img src="images/netflix.png" alt="Netflix logo"> 
+			vs
+			<img src="images/stan.png" alt="Stan logo"> <<<
+			<div>Choose your service to play!</div>
+		</div>
+	</main>
+
 	<main class="win-screen-netflix hidden">
 		<div>
 			<p>The winner is Netflix!</p>
