added draw screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-	<main class="choose-service">
+<!-- remove this hidden later -->
+	<main class="choose-service hidden">
 		<div>
 			>>> <img src="images/netflix.png" alt="Netflix logo"> 
 			vs
@@ -33,6 +34,13 @@
 		</div>
 	</main>
 
+	<main class="draw-screen">
+		<div>
+			<p>It's a draw! You get <img src="images/foxtel.jpg" class="foxtel-logo"> instead.</p>
+			<img src="images/game-of-thrones.jpg" class="thrones">
+		</div>
+	</main>
+
 	<header>
 		<h1>
 			<a href="http://www.netflix.com" target="_blank"><img src="images/netflix.png" alt="Netflix logo"></a> vs <a href="http://www.stan.com.au" target="_blank"><img src="images/stan.png" alt="Stan logo"></a>
@@ -44,9 +52,7 @@
 		<div>
 			<h2 class="netflix">Player: Netflix</h2>
 		</div>
-<!-- 		<div class="draw hidden">
-			<p>>>> Draw! Play again <<<</p>
-		</div> -->
+
 		<div>
 			<h2 class="stan">Player: Stan</h2>
 		</div>
