added function for draw screen

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-<!-- remove this hidden later -->
-	<main class="choose-service hidden">
+	<main class="choose-service">
 		<div>
 			>>> <img src="images/netflix.png" alt="Netflix logo"> 
 			vs
@@ -34,7 +33,7 @@
 		</div>
 	</main>
 
-	<main class="draw-screen">
+	<main class="draw-screen hidden">
 		<div>
 			<p>It's a draw! You get <img src="images/foxtel.jpg" class="foxtel-logo"> instead.</p>
 			<img src="images/game-of-thrones.jpg" class="thrones">
