added restart from draw screen

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<div>
 			<p>It's a draw! You get <img src="images/foxtel.jpg" class="foxtel-logo"> instead.</p>
 			<img src="images/game-of-thrones.jpg" class="thrones">
+			<div class="restart"><p>>>> Play again <<<</p></div>
 		</div>
 	</main>
 
