--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<main class="draw-screen hidden">
 		<div>
 			<p>It's a draw! You get <img src="images/foxtel.jpg" class="foxtel-logo"> instead.</p>
-			<img src="images/game-of-thrones.jpg" class="thrones">
+			<img src="images/game-of-thrones2.jpg" class="thrones">
 			<div class="restart"><p>>>> Play again <<<</p></div>
 		</div>
 	</main>
