added styles for 3 wins

--- a/index.html
+++ b/index.html
@@ -33,6 +33,36 @@
 		</div>
 	</main>
 
+	<main class="three-wins-stan hidden">
+		<div>
+			<p>Stan wins 3 times!</p>
+			<img src="images/better-call-saul.png">
+			<img src="images/party-down.png">
+			<img src="images/preacher.png">
+			<img src="images/electric-dreams2.png">
+			<img src="images/sherlock.jpg">
+			<img src="images/unreal.png">
+			<img src="images/broad-city.png">
+			<img src="images/twin-peaks.jpg">
+			<img src="images/FNL.png">
+		</div>
+	</main>
+
+	<main class="three-wins-netflix hidden">
+		<div>
+			<p>Netflix wins 3 times!</p>
+			<img src="images/murderer.png">		
+			<img src="images/OITNB.svg">
+			<img src="images/sense8-2.png">
+			<img src="images/black-mirror.png">
+			<img src="images/jessica-jones.png">
+			<img src="images/terrace-house.png">
+			<img src="images/bojack.png">
+			<img src="images/house-of-cards.png">
+			<img src="images/glow3.png">
+		</div>
+	</main>
+
 	<main class="draw-screen hidden">
 		<div>
 			<p>It's a draw! You get <img src="images/foxtel.jpg" class="foxtel-logo"> instead.</p>
