added refresh function and external link to 3 wins

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 	<main class="three-wins-stan hidden">
 		<div>
 			<p>Stan wins 3 times!</p>
+			<p class="purchase">
+				<a href="http://www.stan.com.au" target="_blank">>> Click to purchase for $10 per month <<</a>
+			</p>
 			<img src="images/better-call-saul.png">
 			<img src="images/party-down.png">
 			<img src="images/preacher.png">
@@ -45,12 +48,16 @@
 			<img src="images/broad-city.png">
 			<img src="images/twin-peaks.jpg">
 			<img src="images/FNL.png">
+			<div class="restart refresh"><p>>>> Refresh me! <<<</p></div>
 		</div>
 	</main>
 
 	<main class="three-wins-netflix hidden">
 		<div>
 			<p>Netflix wins 3 times!</p>
+			<p class="purchase">
+				<a href="http://www.netflix.com" target="_blank">>> Click to purchase for $9.99 per month! <<</a>
+			</p>
 			<img src="images/murderer.png">		
 			<img src="images/OITNB.svg">
 			<img src="images/sense8-2.png">
@@ -60,6 +67,7 @@
 			<img src="images/bojack.png">
 			<img src="images/house-of-cards.png">
 			<img src="images/glow3.png">
+			<div class="restart refresh"><p>>>> Refresh me! <<<</p></div>
 		</div>
 	</main>
 
